Fixed Main Wrapper and Menu collapse

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,7 +1,10 @@
 @import '../../styles/variables.scss';
 
 
-
+.page-wrapper {
+    overflow: auto;
+    height: 100%;
+}
 
 //
 // Burger menu custom styles
