--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,10 +30,7 @@ button {
     font-family: $fonts;
 }
 
-main {
-    overflow: auto;
-    height: 100%;
-}
+
 
 h1,
 h2,
